--- a/SCRIPT.ipynb
+++ b/SCRIPT.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "303edc2e",
+   "id": "fa4c8851",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -21,7 +21,7 @@
   {
    "cell_type": "code",
    "execution_count": 9,
-   "id": "b3338e2b",
+   "id": "704f3fb3",
    "metadata": {},
    "outputs": [
     {
@@ -41,7 +41,7 @@
   {
    "cell_type": "code",
    "execution_count": 34,
-   "id": "6c4966d5",
+   "id": "d9556eb9",
    "metadata": {},
    "outputs": [
     {
@@ -67,20 +67,86 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "244a829c",
+   "execution_count": 42,
+   "id": "ff892d50",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "MultiDiGraph with 99161 nodes and 0 edges\n"
+     ]
+    }
+   ],
    "source": [
     "G = nx.MultiDiGraph()\n",
     "\n",
     "# Charger les nœuds à partir du fichier nodes.json\n",
-    "with open('nodes.json', 'r') as file:\n",
+    "with open('DATASET-20240130/database/Nodes/Event.json', 'r') as file:\n",
     "    nodes_data = [json.loads(line)['n'] for line in file]\n",
     "    for node_data in nodes_data:\n",
     "        node_id = node_data['id']\n",
     "        node_labels = node_data['labels']\n",
-    "        G.add_node(node_id, labels=node_labels, **node_data['properties'])"
+    "        G.add_node(node_id, labels=node_labels, **node_data['properties'])\n",
+    "        \n",
+    "with open('DATASET-20240130/database/Nodes/User.json', 'r') as file:\n",
+    "    tweet_nodes_data = [json.loads(line)['n'] for line in file]\n",
+    "    for tweet_node_data in tweet_nodes_data:\n",
+    "        tweet_node_id = tweet_node_data['id']\n",
+    "        tweet_node_labels = tweet_node_data['labels']\n",
+    "        G.add_node(tweet_node_id, labels=tweet_node_labels, **tweet_node_data['properties'])\n",
+    "        \n",
+    "with open('DATASET-20240130/database/Nodes/Tweet.json', 'r') as file:\n",
+    "    tweet_nodes_data = [json.loads(line)['n'] for line in file]\n",
+    "    for tweet_node_data in tweet_nodes_data:\n",
+    "        tweet_node_id = tweet_node_data['id']\n",
+    "        tweet_node_labels = tweet_node_data['labels']\n",
+    "        G.add_node(tweet_node_id, labels=tweet_node_labels, **tweet_node_data['properties'])\n",
+    "\n",
+    "# Charger les relations à partir du fichier nodes.json\n",
+    "\n",
+    "with open('DATASET-20240130/database/Relationships/IS_ABOUT.json', 'r') as file:\n",
+    "    relations_data = [json.loads(line)['r'] for line in file]\n",
+    "    for relation_data in relations_data:\n",
+    "        start_node_id = relation_data['start']['id']\n",
+    "        end_node_id = relation_data['end']['id']\n",
+    "        G.add_edge(start_node_id, end_node_id, **relation_data)\n",
+    "\n",
+    "with open('DATASET-20240130/database/Relationships/TALKS_ABOUT.json', 'r') as file:\n",
+    "    relations_data = [json.loads(line)['r'] for line in file]\n",
+    "    for relation_data in relations_data:\n",
+    "        start_node_id = relation_data['start']['id']\n",
+    "        end_node_id = relation_data['end']['id']\n",
+    "        G.add_edge(start_node_id, end_node_id, **relation_data)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 50,
+   "id": "7f5ceeae",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "MultiDiGraph with 99161 nodes and 104470 edges\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "KeyboardInterrupt\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(G)\n",
+    "nx.draw_networkx(G)"
    ]
   }
  ],
